--- a/exec/1.빌드_배포_문서/빌드.md
+++ b/exec/1.빌드_배포_문서/빌드.md
@@ -270,3 +270,70 @@ pipeline {
 
 
 
+## OpenVidu 설치
+[Openvidu on-premise 배포](https://docs.openvidu.io/en/stable/deployment/ce/on-premises)
+
+오픈비두를 배포하기 root 권한을 얻어야 함
+
+`sudo su`
+
+오픈비두를 설치하기 위해 권장되는 경로인 /opt로 이동
+
+`cd /opt`
+
+오픈비두 설치
+
+`curl <https://s3-eu-west-1.amazonaws.com/aws.openvidu.io/install_openvidu_latest.sh> | bash`
+
+설치 후 오픈비두가 설치된 경로로 이동
+
+`$ cd openvidu`
+
+도메인 또는 퍼블릭IP와 오픈비두와 통신을 위한 환경설정
+
+```sh
+$ nano .env
+
+# OpenVidu configuration
+# ----------------------
+# 도메인 또는 퍼블릭IP 주소
+DOMAIN_OR_PUBLIC_IP=<도메인 ip>
+
+# 오픈비두 서버와 통신을 위한 시크릿
+OPENVIDU_SECRET=HOMEDONG
+
+# Certificate type
+CERTIFICATE_TYPE=letsencrypt
+
+# 인증서 타입이 letsencrypt일 경우 이메일 설정
+LETSENCRYPT_EMAIL=user@example.com
+
+# HTTP port
+HTTP_PORT=8442
+
+# HTTPS port(해당 포트를 통해 오픈비두 서버와 연결)
+HTTPS_PORT=8443
+```
+
+설정 후 오픈비두 서버 실행(ctrl + c를 누르면 백그라운드로 실행됨)
+```sh
+$ ./openvidu start
+
+Creating openvidu-docker-compose_coturn_1          ... done
+Creating openvidu-docker-compose_app_1             ... done
+Creating openvidu-docker-compose_kms_1             ... done
+Creating openvidu-docker-compose_nginx_1           ... done
+Creating openvidu-docker-compose_redis_1           ... done
+Creating openvidu-docker-compose_openvidu-server_1 ... done
+
+----------------------------------------------------
+
+   OpenVidu Platform is ready!
+   ---------------------------
+
+   * OpenVidu Server: https://DOMAIN_OR_PUBLIC_IP/
+
+   * OpenVidu Dashboard: https://DOMAIN_OR_PUBLIC_IP/dashboard/
+
+----------------------------------------------------
+```
