--- a/exec/1.빌드_배포_문서/빌드.md
+++ b/exec/1.빌드_배포_문서/빌드.md
@@ -300,13 +300,13 @@ $ nano .env
 DOMAIN_OR_PUBLIC_IP=<도메인 ip>
 
 # 오픈비두 서버와 통신을 위한 시크릿
-OPENVIDU_SECRET=HOMEDONG
+OPENVIDU_SECRET=noinjung
 
 # Certificate type
 CERTIFICATE_TYPE=letsencrypt
 
 # 인증서 타입이 letsencrypt일 경우 이메일 설정
-LETSENCRYPT_EMAIL=user@example.com
+LETSENCRYPT_EMAIL=<user@example.com>
 
 # HTTP port
 HTTP_PORT=8442
@@ -337,3 +337,4 @@ Creating openvidu-docker-compose_openvidu-server_1 ... done
 
 ----------------------------------------------------
 ```
+
